docs/example/fedora/iptables
#
# #########################
# MAKE SURE TO REPLACE THE WORD LANINTERFACE CORRECTLY.
# #########################
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
#SSH
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#HTTP and HTTPS
-A INPUT -m state --state NEW -m tcp -p tcp -i LANINTERFACE --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp -i LANINTERFACE --dport 443 -j ACCEPT
#DNS
-A INPUT -m state --state NEW -m udp -p udp -i LANINTERFACE --dport 53 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
